/*
 * $Id: ChangeLog,v 1.1621 2003/10/23 09:01:20 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-23 03:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/cstruct.ch
    * Corrected to comply with new more Clipper compatible handling of dynamically generated #directives.

2003-10-23 01:59 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Changed ConvertPatterns() to compile '[' (optional marker) into '\16' and ']' into '\17', and to process result pattern too.
    * Changed all logic related to optional markers and repeated groups to use '\16' and '\17' instead of '[' and ']'
    ! Fixed hb_pp_ParseExpression() to keep as one unit dynamically generated #directive followed by NON #directive
      /* Clipper compabtibility. */
  * source/pp/pptable.c
    * Modified compiled rules to reflect above change.

  * include/hbclass.ch
    * Corrected to comply with new more Clipper compatible handling of dynamically generated #directives.

  * tests/pp.prg
    ! Fixed PP_PreProLine() to keep as one unit dynamically generated #directive followed by NON #directive
    * Refreshed InitClsRules() + InitClsResults() and InitRunRules() + InitRunResults().

  * tests/ppclass.ch
    * Synched with hbclass.ch

  * tests/rp_run.ch
    * Minor revisions

  * source/rtl/menuto.prg
    * Reformatted ugly construct:
        ----------------------------------------------------------------------
         if Set( _SET_INTENSITY )

              if(cFrontColor <> nil ,cFrontColor, ColorSelect( CLR_STANDARD ))
         //   ColorSelect( CLR_STANDARD )
         endif
        ----------------------------------------------------------------------

        to:

        ----------------------------------------------------------------------
         IF Set( _SET_INTENSITY )
            IF cBackColor <> Nil